--- a/index.html
+++ b/index.html
@@ -21,73 +21,90 @@
                 <li>
                     <a href="#Contact-Me">Contact Me</a>
                 </li>
-                <li>
-                    <a href="#Resume">Resume</a>
-                </li>
             </ul>
         </nav>
     </main>
-    <section class="banner">
-        <img src="../Develop/assests/images/header-background.jpg" alt="Header" height="250px" width="100%">
+    <main class="banner">
+        <img src="./assests/images/header-background.jpg" alt="Header" height="250px" width="100%">
         <h2 class="heading">Welcome to Landon's World of Coolness</h2>
-    </section>
+    </main>
     <section>
-        <aside>
-            <h2> About Me </h2>
-        <aside>
-        <article id="About-Me">
+        <h3 id="About-Me"> About Me </h3>
             <p> 
-                Hello, My name is Landon Murray. I am from Miami, Florida and currently reside in Atlanta, GA. I am an October Libra (the best zodiac out there). I am an aluminis of Georgia Gwinnett College 
-                with a Bachlors in Business Administarion focusing in Finance. Before pursuing a career in the finance field I studied Performing Arts.
-                My performing arts background includes Singing, Dancing, and Musical Theater. 
+                Lorem ipsum dolor sit amet. Aut natus facere in quae quis est officia odit. Eos inventore eveniet aut eligendi maxime hic reprehenderit aliquam. 
+                Id asperiores quibusdam eum quia exercitationem est tenetur soluta ab amet reprehenderit! Ut fugiat minus aut distinctio voluptas est quia sint qui sequi galisum 
+                33 saepe beatae qui tempora consequatur eos iste voluptatem.A corporis consequuntur vel earum neque aut autem commodi in asperiores rerum aut dolore enim eos molestias veniam?
+                Hic dolore aliquid rem dolorem dolorum in velit deleniti ut laudantium beatae et galisum iure et amet eaque! Sit voluptate debitis et consequatur asperiores sit enim ullam est 
+                voluptas vero cum dolor rerum ut corporis magnam? Non quia sapiente aut odio velit sit illum quia.
             </p>
-            <br>
-            <p>
-                Some of my hobbies include playing video games, I love to go for long walks, hikes, and I am also what they call a "Gym Rat."
-                More so now I am more in tuned with finding peace and balance in my life and figuring out what it is that I enjoy and love to do
-                while also being able to be personalable and an extrovert rather than an introvert. I gained a liking for coding and the software 
-                field shortly after gradutating due to taking an intro class my senior year and enjoying it more than I did my actual major. Now that 
-                I am done with undergrad I can focus on gaining knowledge in the field I think will forever have my attention because it is forever evolving 
-                into something great. << Hello, World <<
-            </p>
-        </article>
     </section>
-    <section>
-        <aside id="Work">
-            <h2> Work </h2>
-        </aside>
-        <article>
-            <h3> Surf Report</h3>
-            <img src="../Develop/assests/images/Surf Report.jpg" alt="Surf Report" height="450" width="75%">
-            <h3> LED Wall</h3>
-            <img src="../Develop/assests/images/nodejs.jpeg" alt="Node/IoT" height="200" width="25%">
-            <h3> Calculator</h3>
-            <img src="../Develop/assests/images/Calculator.jpg" alt="JavaScript" height="200" width="25%">
-            <h3> Pastel Puzzles</h3>
-            <img src="../Develop/assests/images/MERN.jpg" alt="MERN Stack" height="200" width="25%">
-            <h3> Run Buddy</h3>
-            <img src="../Develop/assests/images/html.jpg" alt="HTML/CSS" height="200" width="25%">
-        </article>
+    <section class="container-1">
+        <div id="photo">
+            <a href="https://github.com/LandoBM">
+                <img src="./assests/images/Surf Report.jpg" alt="Surf Report" height="390" width="1028">
+            </a>
+            <header class="box-1"> Surf Report</header>
+            <header class="box-1-ext"> MERN</header>
+        </div>
+    </section>
+    <section class="container-2">
+        <div class="work-txt">
+            <header id="Work">Work</header>
+        </div>
+        <div id="photo">
+            <header class="box-2"> LED Wall</header>
+            <header class="box-2-ext"> Node/ IoT</header>
+                <a href="https://github.com/LandoBM/first-website">
+                    <img src="./assests/images/nodejs.jpeg" alt="Node/IoT" height="320" width="500">
+                </a>
+        </div>
+        <div id="photoend">
+            <header class="box-2"> Calculator</header>
+            <header class="box-2-ext"> JavaScript/React </header>
+                <a href="https://github.com/LandoBM/first-website">
+                    <img src="./assests/images/js-icon.jpg" alt="JavaScript" height="320" width="500">
+                </a>
+        </div>
+    </section>
+    <section class="container-2">
+        <div class="box-4" id="photo">
+            <header class="box-2"> Pastel Puzzles</header>
+            <header class="box-2-ext"> MERN </header>
+                <a href="https://github.com/LandoBM/first-website">
+                    <img src="./assests/images/full_stack_banner.jpg.webp" alt="MERN Stack" height="320" width="500">
+                </a>
+        </div>
+        <div class="box-5" id="photoend">
+            <header class="box-2"> Run Buddy</header>
+            <header class="box-2-ext"> HTML/ CSS </header>
+                <a href="https://github.com/LandoBM/first-website">
+                    <img src="./assests/images/html-icon.png" alt="HTML/CSS" height="320" width="500">
+                </a>
+        </div>
+    </section>
+    <section class="contact">
+        <header class="contact-txt" id="Contact-Me"> Contact Me</header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="555-343-1800"> 555-343-1800</a>
+                </li>
+                <li>
+                    <a href="landonbmurray@icloud.com"> lbm@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://github.com/LandoBM">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/lovin_lando">Twitter</a>
+                </li>
+                <li>
+                    <a href="https://tidal.com/browse/playlist/da7b746d-1030-41a1-b929-6e61022f5cb8">Tidal Playlist</a> 
+                </li>
+            </ul>
+        </nav>
     </section>
 </body>
-<footer id="Contact-Me">
-    <h2>Contact Me</h2>
-    <ul>
-        <li>
-            <a href="#Phone">Phone</a>
-        </li>
-        <li>
-            <a href="#Email">Email</a>
-        </li>
-        <li>
-            <a href="#GitHub">GitHub</a>
-        </li>
-        <li>
-            <a href="#Twitter">Twitter</a>
-        </li>
-        <li>
-            <a href="#Apple-Musice">Apple Music</a> 
-        </li>
-    </ul>
+<footer >
 </footer>
 </html>
