--- a/index-new.html
+++ b/index-new.html
@@ -23,7 +23,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#Work">Work</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item"></li>
                 <a class="nav-link" href="#Contact">Contact</a>
               </li>
             </ul>
