--- a/index.html
+++ b/index.html
@@ -6,131 +6,133 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="./assests/css/style.css" rel="stylesheet">
+    <!-- Import Font Awesome -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Landon's Portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #220080;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Landon Murray</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#About">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#Work">Work</a>
-              </li>
-              <li class="nav-item"></li>
-                <a class="nav-link" href="#Contact">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
-    <div class="conatiner-fluid" id="About">
-    <img src="./assests/images/IMG_0329.JPG" class="img-thumbnail" alt="Profile pic" width="300px" height="200px" >
-    <h1>About Landon</h1>
-    <p>
-        Lorem ipsum dolor sit amet. Aut natus facere in quae quis est officia odit. Eos inventore eveniet aut eligendi maxime hic reprehenderit aliquam. 
-                Id asperiores quibusdam eum quia exercitationem est tenetur soluta ab amet reprehenderit! Ut fugiat minus aut distinctio voluptas est quia sint qui sequi galisum 
-                33 saepe beatae qui tempora consequatur eos iste voluptatem.A corporis consequuntur vel earum neque aut autem commodi in asperiores rerum aut dolore enim eos molestias veniam?
-                Hic dolore aliquid rem dolorem dolorum in velit deleniti ut laudantium beatae et galisum iure et amet eaque! Sit voluptate debitis et consequatur asperiores sit enim ullam est 
-                voluptas vero cum dolor rerum ut corporis magnam? Non quia sapiente aut odio velit sit illum quia.
-    </p>
+  <nav class="navbar navbar-expand-lg" style="background-color: #220080;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Landon Murray Portfolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar" id="navbarNav">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#About">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <main class="container-fluid" id="Work">
-        <div class="project">
-            <img src="./assests/images/nodejs.jpeg" class="rounded float-start" alt="Node" width="500px" height="450px">
-            <div class="project-info">
-                <h4>Assignment</h4>
-            </div>
-            <div class="overview">
-                <h4>Click the Image!</h4>
-                <h5>You can find all assignments completed in BootCamp Here!</h5>            
-            </div>
+  </nav>
+  <div class="conatiner-fluid" id="About" style="display: flex; margin-top: 0%;">
+  <img src="./assests/images/IMG_0329.JPG" class="img-thumbnail" alt="Profile pic" width="300px" height="200px" >
+  <h1>About Landon</h1>
+    <p>
+      Lorem ipsum dolor sit amet. Aut natus facere in quae quis est officia odit. Eos inventore eveniet aut eligendi maxime hic reprehenderit aliquam. 
+      Id asperiores quibusdam eum quia exercitationem est tenetur soluta ab amet reprehenderit! Ut fugiat minus aut distinctio voluptas est quia sint qui sequi galisum 
+      33 saepe beatae qui tempora consequatur eos iste voluptatem.A corporis consequuntur vel earum neque aut autem commodi in asperiores rerum aut dolore enim eos molestias veniam?
+      Hic dolore aliquid rem dolorem dolorum in velit deleniti ut laudantium beatae et galisum iure et amet eaque! Sit voluptate debitis et consequatur asperiores sit enim ullam est 
+      voluptas vero cum dolor rerum ut corporis magnam? Non quia sapiente aut odio velit sit illum quia.
+    </p>
+  </div>
+  <main class="container-fluid" id="Work">
+    <div class="project">
+      <img src="./assests/images/nodejs.jpeg" class="rounded float-start" alt="Node" width="500px" height="450px">
+        <div class="project-info">
+          <h4>Assignment</h4>
         </div>
-        <div class="project">
-            <img src="./assests/images/js-icon.jpg" class="rounded float-end" alt="JavaScript" width="500px" height="450px">
-            <div class="project-info">
-                <h4>Project: Minder</h4>
-            </div>
-            <div class="overview">
-                <h4>Click the Image!</h4>
-                <h5>This project contains an application that allows the user to create their ulitmate movie playlist. The application uses "The Movie Data Base" api to retrieve it's information. The user is able to select a genre and is then presented with varying options with the choice to approve of the movie to have it added to their local stroage and saved for later. The user is also able to search via keyword for a movie as well. Movie dating made easy.</h5>            
-            </div>
+        <div class="overview">
+          <h4>Click the Image!</h4>
+          <h5>You can find all assignments completed in BootCamp Here!</h5>            
         </div>
-    </main>
-    <main class="container-fluid" id="Workbttm">
-        <div class="project">
-            <img src="./assests/images/full_stack_banner.jpg.webp" class="rounded float-start" alt="Node" width="500px" height="450px">
-            <div class="project-info">
-                <h4>Project: 2</h4>
-            </div>
-            <div class="overview">
-                <h4>Click the Image!</h4>
-                <h5>Enter Repo Description Here!</h5>            
-            </div>
+    </div>
+    <div class="project">
+      <img src="./assests/images/js-icon.jpg" class="rounded float-end" alt="JavaScript" width="500px" height="450px" href="https://landobm.github.io/project-1-Minder/">
+        <div class="project-info">
+          <h4>Project: Minder</h4>
         </div>
-        <div class="project">
-            <img src="./assests/images/html-icon.png" class="rounded float-end" alt="JavaScript" width="500px" height="450px">
-            <div class="project-info">
-                <h4>Project: 3</h4>
-            </div>
-            <div class="overview">
-                <h4>Click the Image!</h4>
-                <h5>Enter Repo Description Here!</h5>            
-            </div>
+        <div class="overview">
+          <h4 href="https://landobm.github.io/project-1-Minder/">Minder</h4>
+          <h5>This project contains an application that allows the user to create their ulitmate movie playlist. The application uses "The Movie Data Base" api to retrieve it's information. The user is able to select a genre and is then presented with varying options with the choice to approve of the movie to have it added to their local stroage and saved for later. The user is also able to search via keyword for a movie as well. Movie dating made easy.</h5>            
         </div>
-    </main>
+    </div>
+  </main>
+  <main class="container-fluid" id="Workbttm">
+    <div class="project">
+      <img src="./assests/images/full_stack_banner.jpg.webp" class="rounded float-start" alt="Node" width="500px" height="450px">
+        <div class="project-info">
+          <h4>Project: 2</h4>
+        </div>
+        <div class="overview">
+          <h4>Click the Image!</h4>
+          <h5>Enter Repo Description Here!</h5>            
+        </div>
+    </div>
+    <div class="project">
+      <img src="./assests/images/html-icon.png" class="rounded float-end" alt="JavaScript" width="500px" height="450px">
+        <div class="project-info">
+          <h4>Project: 3</h4>
+        </div>
+        <div class="overview">
+          <h4>Click the Image!</h4>
+          <h5>Enter Repo Description Here!</h5>            
+        </div>
+    </div>
+  </main>
+    <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
-<!-- <footer class="bg-dark text-center text-white"> -->
+<footer class="bg-dark text-center text-white">
     <!-- Grid container -->
-    <!-- <div class="container p-4 pb-0"> -->
-      <!-- Section: Social media -->
-      <!-- <section class="mb-4"> -->
+    <div class="container p-4 pb-0">
+      Contact
+      <section class="mb-4">
         <!-- Facebook -->
-        <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-facebook-f"></i
-        ></a> -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fa-brands fa-facebook"></i>
+        </a>
   
         <!-- Twitter -->
-        <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-twitter"></i
-        ></a> -->
+        ></a>
   
         <!-- Google -->
-        <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-google"></i
-        ></a> -->
+        ></a>
   
         <!-- Instagram -->
-        <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-instagram"></i
-        ></a> -->
+        ></a>
   
         <!-- Linkedin -->
-        <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-linkedin-in"></i
-        ></a> -->
+        ></a>
   
         <!-- Github -->
-        <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-github"></i
-        ></a> -->
-      <!-- </section> -->
-      <!-- Section: Social media -->
-    <!-- </div> -->
-    <!-- Grid container -->
-  
+        ></a>
+      </section>
+    </div>
     <!-- Copyright -->
-    <!-- <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);"> -->
-      <!-- © 2020 Copyright: -->
-      <!-- <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
-    <!-- </div> -->
-    <!-- Copyright -->
-  <!-- </footer> -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:
+      <a class="text-white" >Develop With Landon</a>
+    </div>
+  </footer>
 </html>
