fixed little hiccups with html wording

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <a class="nav-link" href="#Work">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Contact">Contact</a>
+            <a class="nav-link" href="#c-font">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <div class="conatiner-fluid" id="About" style="display: flex; margin-top: 0%;">
-  <img src="./assests/images/IMG_0329.JPG" class="img-thumbnail" alt="Profile pic" width="300px" height="200px" >
+  <img src="./assests/images/IMG_0329.JPG" class="img-thumbnail" alt="Profile pic" width="300px" height="200px" id="me" >
   <h1>About Landon</h1>
     <p>
       Lorem ipsum dolor sit amet. Aut natus facere in quae quis est officia odit. Eos inventore eveniet aut eligendi maxime hic reprehenderit aliquam. 
