updated portfolio that is responsive with differnt screen sizes and add my photo/avatar

--- a/index.html
+++ b/index.html
@@ -38,17 +38,25 @@
       </div>
     </div>
   </nav>
-  <div class="conatiner-fluid" id="About" style="display: flex; margin-top: 0%;">
-  <img src="./assests/images/IMG_0329.JPG" class="img-thumbnail" alt="Profile pic" width="300px" height="200px" id="me" >
-  <h1>About Landon</h1>
-    <p>
+  <main class="container-fluid" id="Photo">
+    <div>
+      <img src="./assests/images/IMG_0329.JPG" class="img-fluid img-thumbnail rounded" alt="Profile pic" width="300px" height="150px">
+    </div>
+  </main>
+  <main class="container-fluid" id="About">
+    <div>
+      <h1>About Landon</h1>
+    </div>
+    <div>
+      <p>
       Lorem ipsum dolor sit amet. Aut natus facere in quae quis est officia odit. Eos inventore eveniet aut eligendi maxime hic reprehenderit aliquam. 
       Id asperiores quibusdam eum quia exercitationem est tenetur soluta ab amet reprehenderit! Ut fugiat minus aut distinctio voluptas est quia sint qui sequi galisum 
       33 saepe beatae qui tempora consequatur eos iste voluptatem.A corporis consequuntur vel earum neque aut autem commodi in asperiores rerum aut dolore enim eos molestias veniam?
       Hic dolore aliquid rem dolorem dolorum in velit deleniti ut laudantium beatae et galisum iure et amet eaque! Sit voluptate debitis et consequatur asperiores sit enim ullam est 
       voluptas vero cum dolor rerum ut corporis magnam? Non quia sapiente aut odio velit sit illum quia.
-    </p>
-  </div>
+      </p>
+    </div>
+  </main>
   <main class="container-fluid" id="Work">
     <div class="project">
       <img src="./assests/images/nodejs.jpeg" class="rounded float-start" alt="Node" width="500px" height="450px">
